[gd_scene load_steps=4 format=3 uid="uid://c5h003o3qi1wl"]

[ext_resource type="Script" uid="uid://jmo2aojowp7v" path="res://panels/TO_BE_SORTED/PlaybackButtons/PlaybackButtons.gd" id="1_0mir5"]
[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_cnqao"]
[ext_resource type="PackedScene" uid="uid://c6smssfk7gn2w" path="res://components/TO_BE_SORTED/ItemListView/ItemListView.tscn" id="2_c46rk"]

[node name="PlaybackButtons" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_cnqao")
script = ExtResource("1_0mir5")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 18

[node name="Settings" type="PanelContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/VBoxContainer"]
layout_mode = 2
text = "Scenes:"

[node name="ItemListView" parent="Settings/VBoxContainer" instance=ExtResource("2_c46rk")]
layout_mode = 2
show_new = false
show_select = false
show_invert = false
show_take = false
show_delete = false
show_separators = false

[node name="CheckButton" type="CheckButton" parent="Settings/VBoxContainer"]
layout_mode = 2
text = "Show All Scenes"

[connection signal="resized" from="ScrollContainer/GridContainer" to="." method="_on_grid_container_resized"]
[connection signal="edit_requested" from="Settings/VBoxContainer/ItemListView" to="." method="_on_item_list_view_edit_requested"]
[connection signal="toggled" from="Settings/VBoxContainer/CheckButton" to="." method="set_show_all"]
